--- a/formSubmit.html
+++ b/formSubmit.html
@@ -7,7 +7,7 @@ if (isset($_POST['submit'])) {
   $phone = $_POST['phone'];
   $message = $_POST['message'];
 
-  $mailTo = "joao@jdantas.com";
+  $mailTo = "jmascaro1@gmail.com";
   $header = "From: " .$uMail;
   $txt = "Name: ".$personName. 
   " \n Company: " .$company.
