--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <main class="mainIndex">
             <div class="paragCenterIndex">
-                <p> Hello, my name is Joao and I'm a game programming enthusiast and a self motivated person. Currently studing at <a href="http://www.lasallecollegevancouver.com">LaSalle College Vancouver.</a></p>
+                <p> Hello, my name is Joao. I'm a game enthusiast and a self motivated person. Currently studing at <a href="http://www.lasallecollegevancouver.com">LaSalle College Vancouver.</a></p>
             </div>
         </main>
         <div class="footer">
