--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                 </fieldset>
                 <fieldset class="emailField">
                     <legend>Email</legend>
-                    <span>joao@jdantas.com</span>
+                    <span>jmascaro1@gmail.com</span>
                 </fieldset>
             </main>
             <div class="footer">
